[package]
name = "hana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
argh = "0.1.12"
mlua = { version = "0.8.9", features = ["luajit", "serialize"] }
nix = "0.26.2"
serde_ini = "0.2.0"
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
